sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: not found: value pluspetit
    if (pluspetit(i+1,i)){
        ^